--- a/6번/6.html
+++ b/6번/6.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>6번</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-
-<body>
-
-	<script src="6.js"></script>
-</body>
-
+  <body>
+    <script src="6.js"></script>
+  </body>
 </html>
